[gd_scene load_steps=11 format=2]

[ext_resource path="res://asset/texture/mob.png" type="Texture" id=1]
[ext_resource path="res://fighting/hitbox/hitbox.gd" type="Script" id=2]
[ext_resource path="res://fighting/mobs/dummy/punchbag_dummy.gd" type="Script" id=3]
[ext_resource path="res://shader/red_dither.tres" type="Material" id=4]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "chase"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_monitoring"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "hurt"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 6.0

[sub_resource type="CircleShape2D" id=4]
radius = 6.0

[node name="dummy" type="Node2D"]
script = ExtResource( 3 )
health = 50.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "chase"
anims/RESET = SubResource( 5 )
anims/chase = SubResource( 1 )
anims/die = SubResource( 2 )
anims/hurt = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10
vframes = 10

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 3 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
monitoring = false
monitorable = false
script = ExtResource( 2 )
knockback = Vector2( 100, -50 )
damage = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
